# ssb64_ml

./: .gitignore  CMakeLists.txt  README.md  record.py  train.py
core/: Gamepad.cc  Gamepad.cpp  Gamepad.h  NNModel.cc  NNModel.h  RecordSession.cpp  RecordSession.h  VideoInput.cc  VideoInput.cpp  VideoInput.h  createModel.py  model.py  trainModel.py
gtkmm/: App.cc  App.cpp  App.h  GamepadSelector.cpp  GamepadSelector.h  RecordPage.cc  RecordPage.cpp  RecordPage.h  RecordWindow.cc  RecordWindow.cpp  RecordWindow.h  TrainPage.cc  TrainPage.h  TrainWindow.cc  TrainWindow.h  VideoInputSelector.cpp  VideoInputSelector.h
src/core/: child_program.cc  child_program.h  gamepad.cc  gamepad.h  gamepad_file.cc  gamepad_file.h  gamepad_listener.cc  gamepad_listener.h  gamepad_spoofer.cc  gamepad_spoofer.h  record_session.cc  record_session.h  shader.cc  shader.h  test_session.cc  test_session.h  texture.cc  texture.h  threadsafe_gamepad.cc  threadsafe_gamepad.h  timer.cc  timer.h  train_session.cc  train_session.h  util.cc  util.h  video_file.cu  video_file.h  video_input.cu  video_input.h  video_output.cc  video_output.h
src/gui/: app.cc  app.h  gamepad_selector.cc  gamepad_selector.h  gamepad_selector_popup.cc  gamepad_selector_popup.h  gamepad_visualizer.cc  gamepad_visualizer.h  record_page.cc  record_page.h  record_window.cc  record_window.h  test_page.cc  test_page.h  test_window.cc  test_window.h  train_page.cc  train_page.h  train_window.cc  train_window.h  window_selector.cc  window_selector.h  window_selector_popup.cc  window_selector_popup.h
src/images/: circle.xcf
(+13 files in other folders)
