cmake_minimum_required (VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 11)
project(SSBML)
file(GLOB CORE_SRC "core/*.cpp")
file(GLOB GTKMM_SRC "gtkmm/*.cpp")
add_executable(SSBML ${CORE_SRC} ${GTKMM_SRC})
find_package(X11 REQUIRED)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
include_directories(${X11_INCLUDE_DIR} ${GTKMM_INCLUDE_DIRS})
target_link_libraries(SSBML ${X11_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${GTKMM_LIBRARIES})
add_definitions(${GTKMM_CFLAGS_OTHER})
link_directories(${GTKMM_LIBRARY_DIRS})
